--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>ABOUT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
