--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>LINKS</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/2125fbe094.js"></script>
 	<link rel="stylesheet" type="text/css" href=""https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
